--- a/contato.css
+++ b/contato.css
@@ -45,11 +45,12 @@ button[type="submit"] {
     cursor: pointer;
     font-size: 16px;
     padding: 10px 20px;
-    transition: background-color 0.2s ease-in-out;
+    transition: background-color 0.2s ease-in-out, padding 0.6s;
     width: 10%;
     margin-left: 45%;
 }
   
 button[type="submit"]:hover {
     background-color: #555;
+    padding: 15px 25px;
 }
